DOCS-790: align filter checkboxes and fix line breaking

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -202,14 +202,13 @@ html, body {
     font-size: 0.9rem;
     line-height: 1rem;
     margin-left: 6px;
-}
-
-.checkboxLabel {
-    margin-left: 6px;
+    display: grid;
+    grid-template-columns: 24px auto 12px;
+    align-items: center;
+    align-content: space-around;
 }
 
 .docCount {
-    float: right;
     color: gray;
 }
 
